--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,11 @@
   "require": {
     "aws/aws-php-sns-message-validator": "^1.7.0",
     "aws/aws-sdk-php": "^3.54",
-    "illuminate/broadcasting": "^8.83.14",
-    "illuminate/console": "^8.83.14",
+    "illuminate/broadcasting": "7.2",
+    "illuminate/console": "^7.2",
     "illuminate/notifications": "^7.2",
     "illuminate/routing": "^7.2",
-    "illuminate/support": "^8.83.14"
+    "illuminate/support": "^7.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0"
